--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Submission" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Submission" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/neon</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+
+
     </style>
+    <style name="title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:padding">25dp</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    
 
     <style name="Theme.Submission" parent="Base.Theme.Submission" />
 </resources>
